--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "node-sass": "^4.8.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-modal": "^3.3.2"
+    "react-modal": "^3.3.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3"
   }
 }
